# typing-compat

./: .coverage  .gitignore  README.md  deploy.sh  setup.cfg  setup.py
tests/: test_base.py  test_py3m10.py  test_py3m11.py  test_py3m12.py  test_py3m5.py  test_py3m6.py  test_py3m7.py  test_py3m8.py  test_py3m9.py  test_typing_compat.py  test_v310.py  test_v37.py  test_v38.py  test_v39.py
typing_compat/: __init__.py  _version.py  py3m10.py  py3m11.py  py3m12.py  py3m5.py  py3m6.py  py3m7.py  py3m8.py  py3m9.py  typing_compat.py
typing_compat/v3/: __init__.py  v310.py  v312.py  v37.py  v38.py  v39.py
