[metadata]
name = typing_compat
description = Typing Compatibility and Extra Functionality
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adnanhad/typing-compat
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires = file: requirements.txt
python_requires = >=3.7
include_package_data = True

[options.extras_require]
dev =
    pytest
    black
    flake8

docs =
    sphinx
    sphinx-rtd-theme

[options.package_data]
* = *.txt, *.rst

[options.entry_points]
console_scripts =
    your_command = your_package.module:function
